Fixed search bar text visibility in Light mode.
This fix is for Issue #1240 I opened. I changed the search bar's (and other input fields') text color to the correct color.

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -2631,7 +2631,7 @@ form {
         -moz-appearance: none;
         background: var(--white-color);
         border: 1px solid var(--hairline-color);
-        color: var(--hairline-color);
+        color: var(--body-fg);
         border-radius: 4px;
         cursor: auto;
         display: block;
